--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "react-icons":"4.12.0"
   },
   "scripts": {
     "start": "react-scripts start",
