--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
     "web-vitals": "^2.1.4",
-    "react-icons":"4.12.0"
+    "react-icons":"4.12.0",
+    "react-simple-typewriter":"5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
